--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion "26.0.1"
+    compileSdkVersion 27
+    buildToolsVersion '27.0.2'
     defaultConfig {
         applicationId "org.karan.RadioGarden"
-        minSdkVersion 22
+        minSdkVersion 14
         targetSdkVersion 23
-        versionCode 1
-        versionName '0.1'
+        versionCode 2
+        versionName '0.2'
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
